Traefik/traefik-default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: traefik-internal
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: true
    referrerPolicy: "no-referrer"
    stsIncludeSubdomains: true
    stsSeconds: 31536000
    permissionsPolicy: "geolocation=(self), microphone=(), camera=(), fullscreen=*"
    customRequestHeaders:
      X-Forwarded-Proto: https

---
# Use this middleware only if you want to allow traffic from a specific local subnet and block all others

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: internalapp-whitelist
  namespace: default
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.xx.xx/24
      - 10.0.0.0/8 # Allows cluster subnets
