Traefik/ingress-deploy-example.yaml
####this can be use as a base to create a traefik ingress for pods####

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`your.domain.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
        - name: internalapp-whitelist #Add this line only if you want to allow traffic from a specific local subnet and block all others
  tls:
    secretName: prod-domain-tls
